# rocket-authorization

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: custom_auth.rs  main.rs  sysadmin_guard.rs
src/: basic.rs  lib.rs  oauth.rs  parse.rs  respond.rs  response.rs
src/parse/: basic.rs  mod.rs  oauth.rs
