[package]
name = "rocket-authorization"
version = "0.2.0-rc.2"
authors = ["iferc <github@iferc.ca>"]
edition = "2021"
description = """
Library for Rocket.rs web servers to easily access and parse Authorization headers from requests.
"""
repository = "https://github.com/iferc/rocket-authorization"
keywords = ["rocket", "authorization", "header", "parse", "guard"]
license = "MIT OR Apache-2.0"
readme = "./README.md"
exclude = [".github", "example"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
base64 = "~0.13"
