[package]
name = "rocket-authorization-example"
version = "0.1.0"
authors = ["iferc <github@iferc.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "~0.4"
rocket-authorization = { version = "*", path = ".." }
