[package]
name = "rocket-authorization-example"
version = "0.1.0"
authors = ["iferc <github@iferc.ca>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
rocket-authorization = { version = "0.2.0-rc.2", path = ".." }
